
2016-10-25  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* cobc.c. cobc.h: moved multiple #undef of internal used macros to cobc.h
	* config.def: added reference-out-of-declaratives config option
	* typeck.c (cb_validate_program_body): use cb_reference_out_of_declaratives
	* cobc.c (process_command_line): make sure cb_reference_out_of_declaratives
	  is not stricter than CB_WARNING when cb_relaxed_syntax_checks is active

2016-10-23  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* tree.h, tree.c, typeck.c, parser.y: fixed missing type changes
	  from int to cob_flags_t for functions using disp_attrs

2016-10-23  Edward Hart <edward.dan.hart@gmail.com>

	* scanner.l: Fixed bug introduced in r1116 which broke lowercase comment
	  paragraphs.

2016-10-22  Dave Pitts <dpitts@cozx.com>

	* cobc.c: added --no-symbols for symbol table listing

2016-10-18  Dave Pitts <dpitts@cozx.com>

	* cobc.c (print_fixed_line): fixed SOURCEFORMAT VARIABLE bug

2016-10-17  Edward Hart <edward.dan.hart@gmail.com>

	* scanner.l (RETURN): renamed to RETURN_TOK (see bug #330)

2016-10-16  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* typeck.c (cb_list_system): simplified, removed hard-coded values
	* cobc.c: listing: allow page break to be disabled with -tlines=0

2016-10-15  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* parser.y: improved checks for duplicate/conflicting clauses in ACCEPT
	  and DISPLAY statements (finished Edwards changes from 2016-10-02)

2016-10-13  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* codegen.c: fixed missing initialization of static_call_cache
	* flags.def, cobc.c, codegen.c: added new cb_flag_c_decl_for_static_call,
	  normally active, to create the option to disable the auto-generation of
	  C function declarations for static CALLs

2016-10-12  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* parser.y: refactored handling of occurs to (setup_occurs) and