@@ -1,4 +1,4 @@
-## Copyright (C) 2003-2012, 2015 Free Software Foundation, Inc.
+## Copyright (C) 2003-2012, 2015-2016 Free Software Foundation, Inc.
 ## Written by Keisuke Nishida, Roger While, Simon Sobisch
 ## 
 ## This file is part of GnuCOBOL.
@@ -364,36 +364,63 @@ AT_DATA([prog.cob], [
         01  FILLER       REDEFINES STRUCTURE1.
             05 FILLER    PIC X(01).
             05 FIELD     PIC X(02) OCCURS 7.
+        01  FILLER.
+            05 FIELDO    PIC X(02) OCCURS 7.
         77  NUMVAR       PIC 9(02) VALUE 1.
         78  CONST4       VALUE 4.
         PROCEDURE DIVISION.
-           MOVE FIELD1-2 TO STRUCTURE1.
-           MOVE FIELD1-2 TO FIELD1-1.
-           MOVE FIELD1-1 TO FIELD1-2, FIELD2-2.
-           MOVE FIELD1-2 TO FIELD2-1.
-           MOVE FIELD2-1 TO FIELD2-2.
-           MOVE FIELD2-1   (2:5) TO FIELD1-2.
-           MOVE STRUCTURE1 (2:4) TO STRUCTURE1 (5:4).
-           MOVE STRUCTURE1 (2:4) TO STRUCTURE1 (6:4).
-           MOVE STRUCTURE1 (1:NUMVAR)  TO STRUCTURE1 (3:13).
-           MOVE STRUCTURE1 (CONST4:2) TO STRUCTURE1 (3:2).
-           MOVE STRUCTURE1 (6:4) TO STRUCTURE1 (2:4).
-           MOVE STRUCTURE1 (6:4) TO STRUCTURE1 (2: ).
-           MOVE FIELD (6)   TO STRUCTURE1 (13:2).
-           MOVE FIELD (5)   TO STRUCTURE1 (13:2).
-           MOVE FIELD (NUMVAR)   TO STRUCTURE1 (13:2).
-           MOVE FIELD (CONST4)   TO STRUCTURE1 (13:2).
+           MOVE FIELD1-2 TO STRUCTURE1
+           MOVE FIELD1-2 TO FIELD1-1
+           MOVE FIELD1-1 TO FIELD1-2, FIELD2-2
+           MOVE FIELD1-2 TO FIELD2-1
+           MOVE FIELD2-1 TO FIELD2-2
+           MOVE FIELD2-1   (2:5) TO FIELD1-2
+           MOVE STRUCTURE1 (2:4) TO STRUCTURE1 (5:4)
+           MOVE STRUCTURE1 (2:4) TO STRUCTURE1 (6:4)
+           MOVE STRUCTURE1 (1:NUMVAR)  TO STRUCTURE1 (3:13)
+           MOVE STRUCTURE1 (NUMVAR:1)  TO STRUCTURE1 (3:13)
+           MOVE STRUCTURE1 (3:13)      TO STRUCTURE1 (1:NUMVAR) 
+           MOVE STRUCTURE1 (3:13)      TO STRUCTURE1 (NUMVAR:1) 
+           MOVE STRUCTURE1 (CONST4:2)  TO STRUCTURE1 (3:2)
+           MOVE STRUCTURE1 (6:4)       TO STRUCTURE1 (2:4)
+           MOVE STRUCTURE1 (6:4)       TO STRUCTURE1 (2: )
+           MOVE FIELD (6)         TO STRUCTURE1 (13:2)
+           MOVE FIELD (5)         TO STRUCTURE1 (13:2)
+           MOVE FIELD (NUMVAR)    TO STRUCTURE1 (13:2)
+           MOVE FIELD (CONST4)    TO STRUCTURE1 (13:2)
+           MOVE FIELDO (1)        TO FIELDO (1)
+           MOVE FIELDO (CONST4)   TO FIELDO (CONST4)
+           MOVE FIELDO (1)        TO FIELDO (2)
+           MOVE FIELDO (4)        TO FIELDO (CONST4)
+           MOVE FIELDO (CONST4)   TO FIELDO (4)
+           MOVE FIELDO (4)        TO FIELDO (NUMVAR)
+           MOVE FIELDO (NUMVAR)   TO FIELDO (4)
+           MOVE FIELDO (NUMVAR)   TO FIELDO (NUMVAR)
            STOP RUN.
 ])
 
+AT_CHECK([$COMPILE -w prog.cob], [0], [], [])
+
 AT_CHECK([$COMPILE prog.cob], [0], [], 
-[prog.cob: 18: warning: overlapping MOVE may produce unpredictable results
-prog.cob: 21: warning: overlapping MOVE may produce unpredictable results
+[prog.cob: 20: warning: overlapping MOVE may produce unpredictable results
 prog.cob: 23: warning: overlapping MOVE may produce unpredictable results
-prog.cob: 24: warning: overlapping MOVE may produce unpredictable results
-prog.cob: 27: warning: overlapping MOVE may produce unpredictable results
-prog.cob: 29: warning: overlapping MOVE may produce unpredictable results
-prog.cob: 30: warning: overlapping MOVE may produce unpredictable results
+prog.cob: 25: warning: overlapping MOVE may produce unpredictable results
+prog.cob: 26: warning: overlapping MOVE may produce unpredictable results
+prog.cob: 32: warning: overlapping MOVE may produce unpredictable results
+prog.cob: 34: warning: overlapping MOVE may produce unpredictable results
+])
+
+AT_CHECK([$COMPILE -Wpossible-overlap prog.cob], [0], [], 
+[prog.cob: 20: warning: overlapping MOVE may produce unpredictable results
+prog.cob: 23: warning: overlapping MOVE may produce unpredictable results
+prog.cob: 25: warning: overlapping MOVE may produce unpredictable results
+prog.cob: 26: warning: overlapping MOVE may produce unpredictable results
+prog.cob: 28: warning: overlapping MOVE may occur and produce unpredictable results
+prog.cob: 29: warning: overlapping MOVE may occur and produce unpredictable results
+prog.cob: 30: warning: overlapping MOVE may occur and produce unpredictable results
+prog.cob: 31: warning: overlapping MOVE may occur and produce unpredictable results
+prog.cob: 32: warning: overlapping MOVE may produce unpredictable results
+prog.cob: 34: warning: overlapping MOVE may produce unpredictable results
 ])
 AT_CHECK([./prog], [0], [], [])
 
